--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,6 @@
         "psr-0" : {
             "ArturDoruch\\PaginatorBundle" : ""
         }
-    }
+    },
+    "target-dir": "ArturDoruch/PaginatorBundle"
 }
