--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
         "twig/extensions": "~1.0"
     },
     "autoload": {
-        "psr-0" : {
-            "ArturDoruch\\PaginatorBundle" : ""
+        "psr-4" : {
+            "ArturDoruch\\PaginatorBundle\\" : ""
         }
     },
-    "target-dir": "ArturDoruch/PaginatorBundle"
 }
