=Update composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "arturdoruch/paginator-bundle",
     "description": "Simple paginator for Symfony2",
     "type": "symfony-bundle",
+    "license": "MIT",
     "keywords": ["paginator", "pagination", "symfony2", "bundle"],
     "authors": [
         {
