--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": ">2.0",
-        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/orm": "^2.2.3",
         "twig/extensions": "~1.0"
     },
     "autoload": {
